--- a/core/static/assets/frontend/assets/css/red-dropdown.css
+++ b/core/static/assets/frontend/assets/css/red-dropdown.css
@@ -8,7 +8,7 @@
   font-size: 16px;
   border: none;
   outline: none;
-  color: white;
+  color: black;
   background-color: inherit;
   font: inherit; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
