--- a/core/static/assets/frontend/assets/css/style.css
+++ b/core/static/assets/frontend/assets/css/style.css
@@ -113,10 +113,12 @@ h1, h2, h3, h4, h5, h6 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
+    background:white;
   height: 40px;
   font-size: 14px;
   transition: all 0.5s;
   color: rgba(255, 255, 255, 0.6);
+
 }
 
 #topbar.topbar-scrolled {
@@ -162,7 +164,8 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: rgba(52, 58, 64, 0.2);
+  /*background: rgba(52, 58, 64, 0.2);*/
+  background:white;
   transition: all 0.5s;
   z-index: 997;
   top: 40px;
@@ -184,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo a {
-  color: #fff;
+  color: black;
 }
 
 #header .logo img {
@@ -231,7 +234,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu a {
   display: block;
   position: relative;
-  color: #fff;
+  color: black;
   transition: 0.3s;
   font-size: 14px;
   font-family: "Open Sans", sans-serif;
