--- a/core/templates/front-end/parts/sidebar-menu.html
+++ b/core/templates/front-end/parts/sidebar-menu.html
@@ -5,14 +5,14 @@
   .openbtn {
   font-size: 20px;
   cursor: pointer;
-  background-color:#21252926;
-  color: white;
+  background-color:white;
+  color: black;
   padding: 10px 15px;
   border: none;
 }
 
 .openbtn:hover {
-  background-color: #444;
+  background-color: white;
 }
 .sidebarmenu {
   height: 100%;
@@ -21,7 +21,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: white;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -31,13 +31,13 @@
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: black;
   display: block;
   transition: 0.3s;
 }
 
 .sidebarmenu a:hover {
-  color: #f1f1f1;
+  color: black;
 }
 
 .sidebarmenu .closebtn {
@@ -51,14 +51,14 @@
 .openbtn {
   font-size: 20px;
   cursor: pointer;
-  background-color:#21252926;
-  color: white;
+  background-color:white;
+  color: black;
   padding: 10px 15px;
   border: none;
 }
 
 .openbtn:hover {
-  background-color: #444;
+  background-color: white;
 }
 
 
