--- a/core/templates/front-end/parts/topbar.html
+++ b/core/templates/front-end/parts/topbar.html
@@ -2,14 +2,14 @@
   <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top ">
     <div class="container d-flex">
       <div class="contact-info mr-auto">
-        <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">contact@example.com</a>
+        <i class="icofont-envelope"></i> <a href="mailto:contact@example.com" style="color:black">contact@example.com</a>
 <!--        <i class="icofont-phone"></i> +1 5589 55488 55-->
       </div>
       <div class="social-links">
 <!--        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>-->
 <!--        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>-->
-        <a href="#" class="" style="color:white"><i class="icofont-globe" style="margin-right:3px"></i>Global | English</a>
-        <a href="#" class="" style="color:white"><i class=""></i>|</a>
+        <a href="#" class="" style="color:black"><i class="icofont-globe" style="margin-right:3px"></i>Global | English</a>
+        <a href="#" class="" style="color:black"><i class=""></i>|</a>
 <!--        <a href="#" class="" style="color:white"><i class="icofont-folder" style="color:#cc1616; margin-right:3px"></i><i/>RED FOLDER</a>-->
           <div id="red-ajax" style="float:right">
             {%include 'front-end/parts/red-folder.html'%}
